@@ -1,175 +1,0 @@
-#! /bin/sh
-##
-## Startup script for the amand Daemon
-##
-## (C) Copyright 2013 Fred Gleason <fredg@paravelsystems.com>
-##
-##    This program is free software; you can redistribute it and/or modify
-##    it under the terms of version 2 of the GNU General Public License as
-##    published by the Free Software Foundation;
-##
-##    This program is distributed in the hope that it will be useful,
-##    but WITHOUT ANY WARRANTY; without even the implied warranty of
-##    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-##    GNU General Public License for more details.
-##
-##    You should have received a copy of the GNU General Public License
-##    along with this program; if not, write to the Free Software
-##    Foundation, Inc., 59 Temple Place, Suite 330, 
-##    Boston, MA  02111-1307  USA
-##
-
-# chkconfig: 235 65 35
-# description: Rivendell Server Manager Monitor Daemon
-# config: /etc/aman.conf
-
-### BEGIN INIT INFO
-# Provides:          amand
-# Required-Start:    $remote_fs
-# Required-Stop:     $remote_fs
-# Default-Start:     2 3 5
-# Default-Stop:      0 1 6
-# Description:       Start the Rivendell Server Manager Monitor Daemon
-### END INIT INFO
-
-#
-# If the LSB Init functions exist, use them, otherwise roll our own
-#
-if test -f /lib/lsb/init-functions ; then
-  . /lib/lsb/init-functions
-else
-  function log_success_msg() {
-    echo "$1 ... done."
-  }
-  function log_failure_msg() {
-    echo "$1 ... done."
-  }
-fi
-
-#
-# Package Definitions
-#
-PACKAGE_BIN=@LOCAL_PREFIX@/sbin/amand
-PACKAGE_CONFIG=/etc/aman.conf
-PACKAGE_PID=/var/run/amand.pid
-PACKAGE_NAME="Rivendell Server Manager Monitor Daemon"
-
-# Check for missing binaries
-if [ ! -x $PACKAGE_BIN ] ; then
-  echo "$PACKAGE_BIN not installed"
-  exit 5
-fi
-
-# Check for existence of needed config file
-if [ ! -r $PACKAGE_CONFIG ] ; then
-  echo "Missing $PACKAGE_CONFIG"
-  exit 6}
-fi
-
-case "$1" in
-    start)
-	if test ! -f $PACKAGE_PID ; then
-	    $PACKAGE_BIN
-	    sleep 1
-	else 
-	    if test ! -d /proc/`cat $PACKAGE_PID` ; then
-		$PACKAGE_BIN
-		sleep 1
-	    fi
-	fi
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		log_success_msg "Starting $PACKAGE_NAME"
-		exit 0
-	    else
-		log_failure_msg "Starting $PACKAGE_NAME"
-		exit 1
-	    fi
-	else
-	    log_failure_msg "Starting $PACKAGE_NAME"
-	    exit 1
-	fi
-	;;
-    stop)
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		kill `cat $PACKAGE_PID`
-		sleep 1
-	    fi
-	fi
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		log_failure_msg "Shutting down $PACKAGE_NAME"
-		exit 1
-	    else
-		log_success_msg "Shutting down $PACKAGE_NAME"
-		exit 0
-	    fi
-	else
-	    log_success_msg "Shutting down $PACKAGE_NAME"
-	    exit 0
-	fi
-	;;
-    restart)
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		kill `cat $PACKAGE_PID`
-		sleep 1
-	    fi
-	fi
-	$PACKAGE_BIN
-	sleep 1
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		log_success_msg "Restarting $PACKAGE_NAME"
-		exit 0
-	    else
-		log_success_msg "Restarting $PACKAGE_NAME"
-		exit 1
-	    fi
-	else
-	    echo "failed."
-	    exit 1
-	fi
-	;;
-    force-reload)
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		kill `cat $PACKAGE_PID`
-		sleep 1
-	    fi
-	fi
-	$PACKAGE_BIN
-	sleep 1
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		log_success_msg "Reloading $PACKAGE_NAME"
-		exit 0
-	    else
-		log_failure_msg "Restarting $PACKAGE_NAME"
-		exit 1
-	    fi
-	else
-	    log_failure_msg "Restarting $PACKAGE_NAME"
-	    exit 1
-	fi
-	;;
-    status)
-	echo -n "Checking for $PACKAGE_NAME..."
-	if test -f $PACKAGE_PID ; then
-	    if test -d /proc/`cat $PACKAGE_PID` ; then
-		echo "running."
-		exit 0
-	    else
-		echo "stale PID file."
-		exit 1
-	    fi
-	else
-	    echo "stopped."
-	    exit 3
-	fi
-	;;
-esac
-
-
-# End of rc.amand
